fixing features card width on mobile

--- a/src/components/features-card/featuresCard.styles.scss
+++ b/src/components/features-card/featuresCard.styles.scss
@@ -44,6 +44,6 @@
   .card {
     margin-bottom: 5%;
     text-align: center;
-    width: 100%;
+    width: 100% !important;
   }
 }
